--- a/pages/9251.html
+++ b/pages/9251.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -639,7 +639,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/vertex+redefinitions'>interaction vertex redefinition</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinition</a></p>
 </li>
 
 <li>
@@ -648,6 +648,28 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>/<a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>relative effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Wilsonian RG</a>, <a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Polchinski flow equation</a></p>
 </li>
 </ul>
 </li>
@@ -780,15 +802,15 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> one way to construct an <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> <math class='maruku-mathml' display='inline' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi></mrow><annotation encoding='application/x-tex'>\mathcal{S}</annotation></semantics></math> via <a class='existingWikiWord' href='/nlab/show/renormalization'>(&quot;re&quot;-)normalization</a> of <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered products</a>/<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitudes</a> is to consider a sequence of <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoffs</a> <math class='maruku-mathml' display='inline' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Lambda</mi></mrow><annotation encoding='application/x-tex'>Lambda</annotation></semantics></math> with corresponding <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective S-matrices</a> <math class='maruku-mathml' display='inline' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒮</mi> <mi>Λ</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{S}_\Lambda</annotation></semantics></math> and then form the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> as <math class='maruku-mathml' display='inline' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi><mo>→</mo><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\Lambda \to \infty</annotation></semantics></math>, which exists if in the course one applies suitable <a class='existingWikiWord' href='/nlab/show/vertex+redefinitions'>interaction vertex redefinitions</a> <math class='maruku-mathml' display='inline' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒵</mi> <mi>Λ</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{Z}_\Lambda</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi><mo stretchy='false'>)</mo><mo>=</mo><munder><mi>lim</mi><mrow><mi>Λ</mi><mo>→</mo><mn>∞</mn></mrow></munder><mo stretchy='false'>(</mo><msub><mi>𝒮</mi> <mi>Λ</mi></msub><mo>∘</mo><msub><mi>𝒵</mi> <mi>Λ</mi></msub><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> one way to construct an <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> <math class='maruku-mathml' display='inline' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi></mrow><annotation encoding='application/x-tex'>\mathcal{S}</annotation></semantics></math> via <a class='existingWikiWord' href='/nlab/show/renormalization'>(&quot;re&quot;-)normalization</a> of <a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered products</a>/<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitudes</a> is to consider a sequence of <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoffs</a> <math class='maruku-mathml' display='inline' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi></mrow><annotation encoding='application/x-tex'>\Lambda</annotation></semantics></math> with corresponding <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective S-matrices</a> <math class='maruku-mathml' display='inline' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒮</mi> <mi>Λ</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{S}_\Lambda</annotation></semantics></math> and then form the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> as <math class='maruku-mathml' display='inline' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Λ</mi><mo>→</mo><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\Lambda \to \infty</annotation></semantics></math>, which exists if in the course one applies suitable <a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinitions</a> <math class='maruku-mathml' display='inline' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝒵</mi> <mi>Λ</mi></msub></mrow><annotation encoding='application/x-tex'>\mathcal{Z}_\Lambda</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi><mo stretchy='false'>)</mo><mo>=</mo><munder><mi>lim</mi><mrow><mi>Λ</mi><mo>→</mo><mn>∞</mn></mrow></munder><mo stretchy='false'>(</mo><msub><mi>𝒮</mi> <mi>Λ</mi></msub><mo>∘</mo><msub><mi>𝒵</mi> <mi>Λ</mi></msub><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   \mathcal{S}(g S_{int} + j A) = \underset{\Lambda \to \infty}{\lim} (\mathcal{S}_\Lambda \circ \mathcal{Z}_\Lambda)(g S_{int} + j A)
 
 </annotation></semantics></math></div>
 <p>(See at <em><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective QFT</a></em> <a href='effective+quantum+field+theory#UVRegularization'>this prop.</a>).</p>
 
-<p>This may be read as saying that as one “removes the UV-cutoff” the original <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> <math class='maruku-mathml' display='inline' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi></mrow><annotation encoding='application/x-tex'>g S_{int} + j A</annotation></semantics></math> is to be corrected by “counterterm-<a class='existingWikiWord' href='/nlab/show/interaction'>interactions</a>”</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_269cbdcb4e59b6a607c5392c8a558187f5a770e5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mrow><mi>counter</mi><mo>,</mo><mi>Λ</mi></mrow></msub><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='mediummathspace'></mspace><mrow><mo>(</mo><msub><mi>𝒵</mi> <mi>Λ</mi></msub><mo>−</mo><mi>id</mi><mo>)</mo></mrow><mrow><mo>(</mo><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>This may be read as saying that as one “removes the UV-cutoff” the original <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> <math class='maruku-mathml' display='inline' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi></mrow><annotation encoding='application/x-tex'>g S_{int} + j A</annotation></semantics></math> is to be corrected by “counterterm-<a class='existingWikiWord' href='/nlab/show/interaction'>interactions</a>”</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_10ef0a059c204baabc3f075e7477728c62cede42_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mrow><mi>counter</mi><mo>,</mo><mi>Λ</mi></mrow></msub><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='mediummathspace'></mspace><mrow><mo>(</mo><msub><mi>𝒵</mi> <mi>Λ</mi></msub><mo>−</mo><mi>id</mi><mo>)</mo></mrow><mrow><mo>(</mo><mi>g</mi><msub><mi>S</mi> <mi>int</mi></msub><mo>+</mo><mi>j</mi><mi>A</mi><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   S_{counter, \Lambda}
   \;\coloneqq\:
   \left(
@@ -843,14 +865,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 31, 2018 08:50:46 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on February  1, 2018 06:11:43 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (218.215.35.135)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/counterterm" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/counterterm/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/counterterm" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/counterterm" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/counterterm" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/counterterm/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/counterterm" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/counterterm" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
