--- a/pages/17036.html
+++ b/pages/17036.html
@@ -309,10 +309,10 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='https://wiki.math.ntnu.no/users/alexasc/start'>webpage</a></li>
+<li><a href='https://aschmeding.wordpress.com'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d7d3147a02a4b8ede2fa552a2e794eff946fa1ab_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d1ffe522e7419d3227476bca6a9367f440f9adeb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/bisection+of+a+Lie+groupoid'>bisection of a Lie groupoid</a></li>
@@ -322,14 +322,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 22, 2015 11:26:16 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.180)
+  Revised on February  2, 2018 04:21:22 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (130.149.14.216)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alexander+Schmeding" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Alexander+Schmeding" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alexander+Schmeding/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Alexander+Schmeding" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alexander+Schmeding" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
