--- a/pages/64.html
+++ b/pages/64.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -336,11 +336,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>not all <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotients</a> <math class='maruku-mathml' display='inline' id='mathml_3ab340a0ab593937f6d42658c75a33648ec2cc99_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>X/G</annotation></semantics></math> of a manifold <math class='maruku-mathml' display='inline' id='mathml_3ab340a0ab593937f6d42658c75a33648ec2cc99_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> by the action of a group <math class='maruku-mathml' display='inline' id='mathml_3ab340a0ab593937f6d42658c75a33648ec2cc99_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> are again manifolds (this is a colimit which fails to exist);</p>
+<p>not all <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotients</a> <math class='maruku-mathml' display='inline' id='mathml_9320b3fe8f5df19a22dbd17af65fc3d7a37c0b9f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>X/G</annotation></semantics></math> of a manifold <math class='maruku-mathml' display='inline' id='mathml_9320b3fe8f5df19a22dbd17af65fc3d7a37c0b9f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> by the action of a group <math class='maruku-mathml' display='inline' id='mathml_9320b3fe8f5df19a22dbd17af65fc3d7a37c0b9f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> are again manifolds (this is a colimit which fails to exist);</p>
 </li>
 
 <li>
-<p>not all <a class='existingWikiWord' href='/nlab/show/pullback'>fiber products</a> <math class='maruku-mathml' display='inline' id='mathml_3ab340a0ab593937f6d42658c75a33648ec2cc99_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi><msub><mo>×</mo> <mi>X</mi></msub><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y \times_X Y</annotation></semantics></math> of surjections <math class='maruku-mathml' display='inline' id='mathml_3ab340a0ab593937f6d42658c75a33648ec2cc99_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>Y \to X</annotation></semantics></math> of manifolds are again manifolds (this is a limit that fails to exist).</p>
+<p>not all <a class='existingWikiWord' href='/nlab/show/pullback'>fiber products</a> <math class='maruku-mathml' display='inline' id='mathml_9320b3fe8f5df19a22dbd17af65fc3d7a37c0b9f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi><msub><mo>×</mo> <mi>X</mi></msub><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y \times_X Y</annotation></semantics></math> of surjections <math class='maruku-mathml' display='inline' id='mathml_9320b3fe8f5df19a22dbd17af65fc3d7a37c0b9f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>Y \to X</annotation></semantics></math> of manifolds are again manifolds (this is a limit that fails to exist).</p>
 </li>
 
 <li>
@@ -360,30 +360,30 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<ul id='MR'>
+<ul>
 <li id='Deligne'>
-<p><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a>, <em>Quelques idées maîtresses de l’œuvre de A. Grothendieck</em>, Matériaux pour l’histoire des mathématiques au XX<math class='maruku-mathml' display='inline' id='mathml_3ab340a0ab593937f6d42658c75a33648ec2cc99_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mo></mo><mi>e</mi></msup></mrow><annotation encoding='application/x-tex'>^e</annotation></semantics></math> siecle (Nice, 1996), Societé Mathématique de France, 1998, pp. 11–19.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Pierre+Deligne'>Pierre Deligne</a>, <em>Quelques idées maîtresses de l’œuvre de A. Grothendieck</em>, Matériaux pour l’histoire des mathématiques au XX<math class='maruku-mathml' display='inline' id='mathml_9320b3fe8f5df19a22dbd17af65fc3d7a37c0b9f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mo></mo><mi>e</mi></msup></mrow><annotation encoding='application/x-tex'>^e</annotation></semantics></math> siecle (Nice, 1996), Societé Mathématique de France, 1998, pp. 11–19.</p>
 </li>
 
-<li>
+<li id='MR'>
 <p><a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a> and <a class='existingWikiWord' href='/nlab/show/Gonzalo+E.+Reyes'>Gonzalo Reyes</a>, <a class='existingWikiWord' href='/nlab/show/Models+for+Smooth+Infinitesimal+Analysis'>Models for Smooth Infinitesimal Analysis</a></p>
 </li>
-</ul>
 
-<ul id='Law'>
-<li>W. Lawvere, <em>Taking categories seriously</em> (<a href='http://www.emis.de/journals/TAC/reprints/articles/8/tr8.pdf'>pdf</a>)</li>
+<li id='Law'>
+<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, <em>Taking categories seriously</em> (<a href='http://www.emis.de/journals/TAC/reprints/articles/8/tr8.pdf'>pdf</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on July 17, 2016 21:47:54 
-  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (211.26.216.154)
+  Revised on February  2, 2018 08:49:20 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dichotomy+between+nice+objects+and+nice+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dichotomy+between+nice+objects+and+nice+categories/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/dichotomy+between+nice+objects+and+nice+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dichotomy+between+nice+objects+and+nice+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dichotomy+between+nice+objects+and+nice+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dichotomy+between+nice+objects+and+nice+categories/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/dichotomy+between+nice+objects+and+nice+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dichotomy+between+nice+objects+and+nice+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
