--- a/pages/10633.html
+++ b/pages/10633.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,22 +317,32 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Rigid_analytic_space'>Rigid analytic space</a></em></li>
+<li>
+<p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Rigid_analytic_space'>Rigid analytic space</a></em></p>
+</li>
+
+<li>
+<p>Johannes Nicaise, Chenyang Xu, Tony Yue Yu, <em>The non-archimedean SYZ fibration</em>, arxiv/1802.00287](https://arxiv.org/abs/1802.00287)</p>
+</li>
 </ul>
+
+<blockquote>
+<p>We construct non-archimedean SYZ fibrations for maximally degenerate Calabi-Yau varieties, and we show that they are affinoid torus fibrations away from a codimension two subset of the base. This confirms a prediction by Kontsevich and Soibelman. We also give an explicit description of the induced integral affine structure on the base of the SYZ fibration. Our main technical tool is a study of the structure of minimal dlt-models along one-dimensional strata.</p>
+</blockquote>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on July  7, 2014 04:42:35 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.76.8.26)
+  Revised on February  2, 2018 12:44:37 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (212.91.105.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/affinoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/affinoid/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/affinoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/affinoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/affinoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/affinoid/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/affinoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/affinoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
