--- a/pages/3457.html
+++ b/pages/3457.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      etale map in nLab
+      étale map in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      etale map
+      étale map
   </h1>
 
 
@@ -308,28 +308,31 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+    <p>
+</p>
+
+<div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
 <h4 id='tale_morphisms'>Étale morphisms</h4>
 
 <div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/etale+map'>étale morphism</a></strong> (<a class='existingWikiWord' href='/nlab/show/submersion'>submersion</a>, <a class='existingWikiWord' href='/nlab/show/immersion'>immersion</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+map'>étale morphism</a></strong> (<a class='existingWikiWord' href='/nlab/show/submersion'>submersion</a>, <a class='existingWikiWord' href='/nlab/show/immersion'>immersion</a>)</p>
 
 <p>generally in <strong><a class='existingWikiWord' href='/nlab/show/differential+cohesive+%28infinity%2C1%29-topos'>differential cohesion</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_525074886a90d01066f2baa67c74896a0cae1246_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_1096960904d0c302f4709195d94732df31de3023_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/formally+etale+morphism'>formally étale</a> (<a class='existingWikiWord' href='/nlab/show/formally+smooth+morphism'>formally smooth</a>, <a class='existingWikiWord' href='/nlab/show/formally+unramified+morphism'>formally unramified</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/formally+%C3%A9tale+morphism'>formally étale</a> (<a class='existingWikiWord' href='/nlab/show/formally+smooth+morphism'>formally smooth</a>, <a class='existingWikiWord' href='/nlab/show/formally+unramified+morphism'>formally unramified</a>)</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+topos'>étale topos</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+topos'>étale topos</a></p>
 </li>
 
 <li>
@@ -337,7 +340,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+cohomology'>étale cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+cohomology'>étale cohomology</a></p>
 </li>
 
 <li>
@@ -349,7 +352,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/local+homeomorphism'>local homeomorphism</a>, <a class='existingWikiWord' href='/nlab/show/etale+space'>étale space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/local+homeomorphism'>local homeomorphism</a>, <a class='existingWikiWord' href='/nlab/show/%C3%A9tal%C3%A9+space'>étale space</a></p>
 </li>
 
 <li>
@@ -545,7 +548,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_2'>Examples</a><ul><li><a href='#between_topological_spaces'>Between topological spaces</a></li><li><a href='#between_smooth_manifolds'>Between smooth manifolds</a></li><li><a href='#between_schemes_affine_schemes__rings'>Between schemes (affine schemes / rings)</a></li><li><a href='#between_rings'>Between <math class='maruku-mathml' display='inline' id='mathml_525074886a90d01066f2baa67c74896a0cae1246_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-rings</a></li><li><a href='#between_analytic_spaces'>Between analytic spaces</a></li><li><a href='#between_toposes'>Between toposes</a></li></ul></li><li><a href='#axiomatization'>Axiomatization</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_2'>Examples</a><ul><li><a href='#between_topological_spaces'>Between topological spaces</a></li><li><a href='#between_smooth_manifolds'>Between smooth manifolds</a></li><li><a href='#between_schemes_affine_schemes__rings'>Between schemes (affine schemes / rings)</a></li><li><a href='#between_rings'>Between <math class='maruku-mathml' display='inline' id='mathml_1096960904d0c302f4709195d94732df31de3023_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-rings</a></li><li><a href='#between_analytic_spaces'>Between analytic spaces</a></li><li><a href='#between_toposes'>Between toposes</a></li></ul></li><li><a href='#axiomatization'>Axiomatization</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The notion of <em>étale map</em> is an abstraction of that of <a class='existingWikiWord' href='/nlab/show/local+homeomorphism'>local homeomorphism</a> in <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>. The concept is usually found in places with a geometric or topological flavour.</p>
@@ -554,7 +557,7 @@ margin-left: 0em;
 
 <h3 id='between_topological_spaces'>Between topological spaces</h3>
 
-<p>An étale map between <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> is a <a class='existingWikiWord' href='/nlab/show/local+homeomorphism'>local homeomorphism</a>; see <a class='existingWikiWord' href='/nlab/show/etale+space'>étalé space</a> (which is the total space of such a map viewed as a <a class='existingWikiWord' href='/nlab/show/bundle'>bundle</a>).</p>
+<p>An étale map between <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a> is a <a class='existingWikiWord' href='/nlab/show/local+homeomorphism'>local homeomorphism</a>; see <a class='existingWikiWord' href='/nlab/show/%C3%A9tal%C3%A9+space'>étalé space</a> (which is the total space of such a map viewed as a <a class='existingWikiWord' href='/nlab/show/bundle'>bundle</a>).</p>
 
 <h3 id='between_smooth_manifolds'>Between smooth manifolds</h3>
 
@@ -566,7 +569,7 @@ margin-left: 0em;
 
 <p>Restricted to <a class='existingWikiWord' href='/nlab/show/affine+scheme'>affine schemes</a>, this yields, <a class='existingWikiWord' href='/nlab/show/Isbell+duality'>dually</a>, a notion of étale morphisms between <a class='existingWikiWord' href='/nlab/show/ring'>rings</a>. Étale maps between noncommutative <a class='existingWikiWord' href='/nlab/show/ring'>rings</a> have also been considered.</p>
 
-<h3 id='between_rings'>Between <math class='maruku-mathml' display='inline' id='mathml_525074886a90d01066f2baa67c74896a0cae1246_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-rings</h3>
+<h3 id='between_rings'>Between <math class='maruku-mathml' display='inline' id='mathml_1096960904d0c302f4709195d94732df31de3023_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding='application/x-tex'>E_\infty</annotation></semantics></math>-rings</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+morphism+of+E-%E2%88%9E+rings'>étale morphism of E-∞ rings</a></li>
@@ -585,7 +588,7 @@ margin-left: 0em;
 <h3 id='between_toposes'>Between toposes</h3>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></li>
 </ul>
 
 <h2 id='axiomatization'>Axiomatization</h2>
@@ -604,7 +607,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/formally+etale+morphism'>formally étale morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/formally+%C3%A9tale+morphism'>formally étale morphism</a></p>
 </li>
 
 <li>
@@ -638,22 +641,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 18, 2014 19:38:32 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.7)
+  Revised on February  3, 2018 00:29:07 
+  by <a class="existingWikiWord" href="/nlab/show/Colin+Zwanziger">Colin Zwanziger</a>
+  (128.237.136.28)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/etale+map" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/etale+map/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/etale+map" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/etale+map" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%C3%A9tale+map" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%C3%A9tale+map/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/%C3%A9tale+map" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%C3%A9tale+map" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/etale+map" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/%C3%A9tale+map" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/etale+map" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/%C3%A9tale+map" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/etale+map" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/%C3%A9tale+map" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
