--- a/pages/1106.html
+++ b/pages/1106.html
@@ -481,7 +481,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -646,7 +646,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Saunders+Mac+Lane'>Saunders MacLane</a>, <a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/Saunders+Mac+Lane'>Saunders Mac Lane</a>, <a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>,</p>
 
 <p><em>Sheaves in Geometry and Logic – A first introduction to topos theory</em></p>
 
@@ -1137,14 +1137,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 29, 2016 09:39:49 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.197.2)
+  Revised on February  3, 2018 02:59:59 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2.30.84.78)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sheaves+in+Geometry+and+Logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sheaves+in+Geometry+and+Logic/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/Sheaves+in+Geometry+and+Logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sheaves+in+Geometry+and+Logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sheaves+in+Geometry+and+Logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sheaves+in+Geometry+and+Logic/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/Sheaves+in+Geometry+and+Logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sheaves+in+Geometry+and+Logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
