--- a/pages/10633.html
+++ b/pages/10633.html
@@ -322,7 +322,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Johannes Nicaise, Chenyang Xu, Tony Yue Yu, <em>The non-archimedean SYZ fibration</em>, arxiv/1802.00287](https://arxiv.org/abs/1802.00287)</p>
+<p>Johannes Nicaise, Chenyang Xu, Tony Yue Yu, <em>The non-archimedean SYZ fibration</em>, <a href='https://arxiv.org/abs/1802.00287'>arxiv/1802.00287</a></p>
 </li>
 </ul>
 
@@ -335,14 +335,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  2, 2018 12:44:37 
+  Revised on February  3, 2018 04:30:34 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
   (212.91.105.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/affinoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/affinoid/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/affinoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/affinoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/affinoid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/affinoid/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/affinoid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/affinoid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
