--- a/pages/6452.html
+++ b/pages/6452.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -519,7 +519,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#scope'>Scope</a></li><li><a href='#spaces_categories_topology_sheaves_topoi_cohomology_'>Spaces, categories, topology, sheaves, topoi, cohomology, …</a></li><li><a href='#general_history_of_mathematics'>General history of mathematics</a></li><li><a href='#wiki_collection_and_encyclopaedia_articles'>Wiki, collection and encyclopaedia articles</a></li><li><a href='#researchers_and_institutes_for_history_of_mathematics'>Researchers and institutes for history of mathematics</a></li><li><a href='#lab_entries_with_historical_information'><math class='maruku-mathml' display='inline' id='mathml_b9dfc61f60c798a09e95504159e7897cb045ac55_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries with historical information</a></li><li><a href='#other_literature'>Other literature</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#scope'>Scope</a></li><li><a href='#spaces_categories_topology_sheaves_topoi_cohomology_'>Spaces, categories, topology, sheaves, topoi, cohomology, …</a></li><li><a href='#general_history_of_mathematics'>General history of mathematics</a></li><li><a href='#wiki_collection_and_encyclopaedia_articles'>Wiki, collection and encyclopaedia articles</a></li><li><a href='#researchers_and_institutes_for_history_of_mathematics'>Researchers and institutes for history of mathematics</a></li><li><a href='#lab_entries_with_historical_information'><math class='maruku-mathml' display='inline' id='mathml_87308b7bab14866c05f3d2b7dca05bdc88b10ba6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries with historical information</a></li><li><a href='#other_literature'>Other literature</a></li></ul></div>
 <h2 id='scope'>Scope</h2>
 
 <p>In the <a class='existingWikiWord' href='/nlab/show/HomePage'>nLab</a> we appear to currently be interested mainly in the development of ideas of <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>, <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a>, <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf theory</a>, <a class='existingWikiWord' href='/nlab/show/homological+algebra'>homological algebra</a>, <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> and the general concept of <a class='existingWikiWord' href='/nlab/show/space'>space</a>, as well as interactions between <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>, <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> and <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a>. Hence we will concentrate here on references with similar emphasis and list only a few works for the general history of mathematics (<a href='http://en.wikipedia.org/wiki/History_of_mathematics'>wikipedia</a> has a nice reference list there).</p>
@@ -570,7 +570,7 @@ margin-left: 0em;
 <li><a href='http://hsm.institut.math.jussieu.fr'>hsm</a> at Jussieu</li>
 </ul>
 
-<h2 id='lab_entries_with_historical_information'><math class='maruku-mathml' display='inline' id='mathml_b9dfc61f60c798a09e95504159e7897cb045ac55_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries with historical information</h2>
+<h2 id='lab_entries_with_historical_information'><math class='maruku-mathml' display='inline' id='mathml_87308b7bab14866c05f3d2b7dca05bdc88b10ba6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries with historical information</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/history+of+cohomology+with+local+coefficients'>history of cohomology with local coefficients</a></li>
@@ -598,19 +598,25 @@ margin-left: 0em;
 <li>Piotr Blaszczyk, Vladimir Kanovei, Karin U. Katz, Mikhail G. Katz, Semen S. Kutateladze, David Sherry, <em>Toward a history of mathematics focused on procedures</em>, <a href='http://arxiv.org/abs/1609.04531'>arxiv/1609.04531</a></li>
 </ul>
 
+<p>A collection of articles on XX-century mathematics is in</p>
+
+<ul>
+<li>Michele Audin (editor), <em><a class='existingWikiWord' href='/nlab/show/Mat%C3%A9riaux+pour+l%E2%80%99histoire+des+math%C3%A9matiques+au+XXe+si%C3%A8cle'>Matériaux pour l’histoire des mathématiques au XXe siècle</a></em> - Actes du colloque à la mémoire de Jean Dieudonné (Nice 1996) Séminaires &amp; Congrès. Numèro 3. Paris (Socièté Mathématique de France). 1998. 283 pp.</li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on November  8, 2016 00:43:29 
+  Revised on February  3, 2018 09:36:18 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (93.159.68.3)
+  (161.53.28.4)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/history+of+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/history+of+mathematics/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/history+of+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/history+of+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/history+of+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/history+of+mathematics/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/history+of+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/history+of+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
