--- a/pages/18978.html
+++ b/pages/18978.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      compositionality in nLab
+      Joshua Tan in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      compositionality
+      Joshua Tan
   </h1>
 
 
@@ -308,42 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='idea'>Idea</h2>
-
-<p>Compositionality describes how complex things can be assembled out of simpler parts.</p>
-
-<h3 id='in_computation'>In computation</h3>
-
-<p>From <a href='https://simons.berkeley.edu/workshops/logic2016-3'>1</a>:</p>
-
-<blockquote>
-<p>The compositional description of complex objects is a fundamental feature of the logical structure of computation. The use of logical languages in database theory and in algorithmic and finite model theory provides a basic level of compositionality, but establishing systematic relationships between compositional descriptions and complexity remains elusive. Compositional models of probabilistic systems and languages have been developed, but inferring probabilistic properties of systems in a compositional fashion is an important challenge. In quantum computation, the phenomenon of entanglement poses a challenge at a fundamental level to the scope of compositional descriptions. At the same time, compositionally has been proposed as a fundamental principle for the development of physical theories.</p>
-</blockquote>
-
-<h2 id='references'>References</h2>
-
-<ol>
-<li><em>Compositionality</em> is the name of a <a href='https://simons.berkeley.edu/workshops/logic2016-3'>workshop</a> hosted at UC Berkeley in 2016. Accessed online at <a href='https://simons.berkeley.edu/workshops/logic2016-3'>https://simons.berkeley.edu/workshops/logic2016-3</a>.</li>
-</ol>
+    <p>I’m a PhD student at Oxford, studying under Samson Abramsky and Bob Coecke. My <a href='www.joshuatan.com/research'>website</a>.</p>
 </div>
 
 <div class="revisedby">
-  Revised on February  3, 2018 11:31:11 
-  by <span class="newWikiWord">Joshua Tan<a href="/nlab/new/Joshua+Tan">?</a></span>
+  Created on February  3, 2018 11:44:04 
+  by <a class="existingWikiWord" href="/nlab/show/Joshua+Tan">Joshua Tan</a>
   (46.87.110.199)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/compositionality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/compositionality/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/compositionality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/compositionality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Joshua+Tan" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/compositionality" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Joshua+Tan" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/compositionality" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Joshua+Tan" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/compositionality" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Joshua+Tan" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
