--- a/pages/10757.html
+++ b/pages/10757.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      generalized Eilenberg-MacLane space in nLab
+      generalized Eilenberg-Mac Lane space in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      generalized Eilenberg-MacLane space
+      generalized Eilenberg-Mac Lane space
   </h1>
 
 
@@ -308,26 +308,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
+    <p>
+</p>
+
+<h1 id='contents'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#disambigation'>Disambigation</a></li><li><a href='#idea'>Idea</a></li><li><a href='#applications'>Applications</a></li></ul></div>
 <h3 id='disambigation'>Disambigation</h3>
 
-<p>This entry is about ‘generalized Eilenberg-MacLane spaces’ as used in Stable Homotopy Theory. The same term is used for a related concept, namely the representing fibration for <a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>cohomology with local coefficients</a>. That cohomology is also called <a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>twisted cohomology</a> so we have used the term <a class='existingWikiWord' href='/nlab/show/twisted+Eilenberg-MacLane+space'>twisted Eilenberg - Mac Lane space</a> for this second use.</p>
+<p>This entry is about ‘generalized Eilenberg-Mac Lane spaces’ as used in Stable Homotopy Theory. The same term is used for a related concept, namely the representing fibration for <a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>cohomology with local coefficients</a>. That cohomology is also called <a class='existingWikiWord' href='/nlab/show/twisted+cohomology'>twisted cohomology</a> so we have used the term <a class='existingWikiWord' href='/nlab/show/twisted+Eilenberg-MacLane+space'>twisted Eilenberg - Mac Lane space</a> for this second use.</p>
 
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>generalized Eilenberg-MacLane space</em> is a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> with the <a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy type</a> of a <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> of (finitely many) <a class='existingWikiWord' href='/nlab/show/Eilenberg-Mac+Lane+space'>Eilenberg-MacLane spaces</a>.</p>
+<p>A <em>generalized Eilenberg-Mac Lane space</em> is a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> with the <a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy type</a> of a <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> of (finitely many) <a class='existingWikiWord' href='/nlab/show/Eilenberg-Mac+Lane+space'>Eilenberg-MacLane spaces</a>.</p>
 
-<p>Accordingly a <em>generalized Eilenberg-MacLane spectrum</em> is a <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> equivalent to a <a class='existingWikiWord' href='/nlab/show/wedge+sum'>wedge sum</a> of <a class='existingWikiWord' href='/nlab/show/Eilenberg-Mac+Lane+spectrum'>Eilenberg-MacLane spectra</a>.</p>
+<p>Accordingly a <em>generalized Eilenberg-Mac Lane spectrum</em> is a <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> equivalent to a <a class='existingWikiWord' href='/nlab/show/wedge+sum'>wedge sum</a> of <a class='existingWikiWord' href='/nlab/show/Eilenberg-Mac+Lane+spectrum'>Eilenberg-Mac Lane spectra</a>.</p>
 
-<blockquote>
-<p>to be expanded… please add if you have the time</p>
-</blockquote>
+<p>&gt; to be expanded… please add if you have the time</p>
 
 <h2 id='applications'>Applications</h2>
 
 <ul>
-<li>Generalized Eilenberg-MacLane spectra appear as <a class='existingWikiWord' href='/nlab/show/coefficient'>coefficients</a> in an <a class='existingWikiWord' href='/nlab/show/Adams+resolution'>Adams resolution</a> used in the <a class='existingWikiWord' href='/nlab/show/Adams+spectral+sequence'>Adams spectral sequence</a>.</li>
+<li>Generalized Eilenberg-Mac Lane spectra appear as <a class='existingWikiWord' href='/nlab/show/coefficient'>coefficients</a> in an <a class='existingWikiWord' href='/nlab/show/Adams+resolution'>Adams resolution</a> used in the <a class='existingWikiWord' href='/nlab/show/Adams+spectral+sequence'>Adams spectral sequence</a>.</li>
 </ul>
 
 <p>
@@ -338,22 +339,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2015 17:06:02 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (69.214.171.5)
+  Revised on February  3, 2018 12:48:57 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2.30.84.78)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/generalized+Eilenberg-MacLane+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/generalized+Eilenberg-MacLane+space/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/generalized+Eilenberg-MacLane+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/generalized+Eilenberg-MacLane+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/generalized+Eilenberg-Mac+Lane+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/generalized+Eilenberg-Mac+Lane+space/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/generalized+Eilenberg-Mac+Lane+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/generalized+Eilenberg-Mac+Lane+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/generalized+Eilenberg-MacLane+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/generalized+Eilenberg-Mac+Lane+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/generalized+Eilenberg-MacLane+space" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/generalized+Eilenberg-Mac+Lane+space" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/generalized+Eilenberg-MacLane+space" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/generalized+Eilenberg-Mac+Lane+space" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
